--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "csv-parse": "^6.1.0",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.540.0",
     "mammoth": "^1.10.0",
     "next": "15.5.0",
