Fix UUID error in Excel import - remove 'default-user' string
- Remove user_id field from all import endpoints
- Let user_id be NULL in database instead of invalid string
- Fixes 'invalid input syntax for type uuid' error
- Allows Excel imports to work properly

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 # production
 /build
 
+# IMPORTANT: Never commit these files
+/lib/db/client-fixed.ts
+.env.local
+.env.production
+
 # misc
 .DS_Store
 *.pem
