--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,25 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
-# AI Providers (at least one required)
-ANTHROPIC_API_KEY=sk-ant-...
-OPENAI_API_KEY=sk-...
+# AI Provider Configuration
+# Choose which AI provider to use by default: 'openai', 'anthropic', or 'auto'
+# If not set, will use whichever has a valid API key (Anthropic takes priority)
+AI_PROVIDER=openai
 
-# Embedding Model
+# OpenAI Configuration
+# Get your API key from: https://platform.openai.com/api-keys
+# IMPORTANT: Replace 'placeholder-openai-key' with your actual OpenAI API key!
+OPENAI_API_KEY=sk-proj-YOUR-ACTUAL-OPENAI-KEY-HERE
+# Model options: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
+OPENAI_MODEL=gpt-4o-mini
+
+# Anthropic Configuration (Optional)
+# Get your API key from: https://console.anthropic.com/settings/keys
+ANTHROPIC_API_KEY=sk-ant-YOUR-ACTUAL-ANTHROPIC-KEY-HERE
+
+# Embedding Model (for OpenAI embeddings)
 EMBEDDING_MODEL=text-embedding-3-large
+# Generation Model (legacy - replaced by OPENAI_MODEL)
 GEN_MODEL=claude-3-5-sonnet-20241022
 
 # App
